@@ -1,3 +1,8 @@
+2007-07-04 Henry Proudhon <henry.proudhon@insa-lyon.fr>
+	* swt/org/jfree/experimental/chart/swt/ChartComposite.java
+	(addChartMouseListener): New method,
+	(removeChartMouseListener): Likewise.
+
 2007-07-03  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/plot/XYPlot.java
